--- a/src/board/ARK/.cproject
+++ b/src/board/ARK/.cproject
@@ -189,6 +189,8 @@
                         						
                         <entry excluding="Startup|Src/process_ad527x.c|Src/main.c|Src/data_ina219.c|Src/data_ds18b20.c|Src/battery.c" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Application"/>
                         						
+                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Application/Startup"/>
+                        						
                         <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
                         						
                         <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
@@ -366,6 +368,8 @@
                     <sourceEntries>
                         						
                         <entry excluding="Startup|Src/process_ad527x.c|Src/main.c|Src/data_ina219.c|Src/data_ds18b20.c|Src/battery.c" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Application"/>
+                        						
+                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Application/Startup"/>
                         						
                         <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
                         						
